mvn-jruby: Autospec creation for version 9.1.17.0

--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = mvn-jruby
 url = https://github.com/jruby/jruby/archive/9.1.17.0.tar.gz
-archives = https://repo1.maven.org/maven2/org/jruby/jruby-complete/9.1.17.0/jruby-complete-9.1.17.0.jar : https://repo1.maven.org/maven2/org/jruby/jruby-complete/9.1.17.0/jruby-complete-9.1.17.0.pom : https://repo1.maven.org/maven2/org/jruby/jruby-core/9.1.17.0/jruby-core-9.1.17.0.jar : https://repo1.maven.org/maven2/org/jruby/jruby-core/9.1.17.0/jruby-core-9.1.17.0.pom : https://repo1.maven.org/maven2/org/jruby/jruby-parent/9.1.17.0/jruby-parent-9.1.17.0.pom :
+archives = https://repo1.maven.org/maven2/org/jruby/jruby-complete/9.1.17.0/jruby-complete-9.1.17.0.jar : https://repo1.maven.org/maven2/org/jruby/jruby-complete/9.1.17.0/jruby-complete-9.1.17.0.pom : https://repo1.maven.org/maven2/org/jruby/jruby-core/9.1.17.0/jruby-core-9.1.17.0.jar : https://repo1.maven.org/maven2/org/jruby/jruby-core/9.1.17.0/jruby-core-9.1.17.0.pom : https://repo1.maven.org/maven2/org/jruby/jruby-parent/9.1.17.0/jruby-parent-9.1.17.0.pom : https://repo1.maven.org/maven2/org/jruby/jruby-artifacts/9.1.17.0/jruby-artifacts-9.1.17.0.pom :
 giturl = https://github.com/jruby/jruby.git
 
 [autospec]
